fixed bug where header btn got squished, default heights

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -404,7 +404,13 @@ strong {
   }
 }
 #top .header-row1 {
-  margin: 50px 0;
+  margin: 50px auto;
+}
+#top .header-row1 .hello-welcome {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 #top .header-row1 .hello-welcome .hello {
   margin-bottom: 30px;
@@ -417,6 +423,20 @@ strong {
 #top .header-row1 .hello-welcome .welcome {
   display: none;
   justify-content: flex-start;
+  text-align: center;
+}
+@media (min-width: 800px) {
+  #top .header-row1 .hello-welcome .welcome {
+    text-align: left;
+  }
+}
+@media (min-width: 800px) {
+  #top .header-row1 .hello-welcome {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
 }
 #top .header-row1 #hidden-img {
   display: none;
@@ -451,14 +471,14 @@ strong {
   }
 }
 #top .intro {
-  height: 280px;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 #top .intro h3 {
   text-align: center;
+  margin-bottom: 20px;
 }
 #top .intro a:hover {
   background: #666;
@@ -466,6 +486,7 @@ strong {
 }
 #top .intro .btn {
   text-decoration: none;
+  margin: 20px 0;
   padding: 12px 25px;
   cursor: pointer;
   transition: 0.3s;
@@ -474,16 +495,10 @@ strong {
   justify-content: center;
   border-radius: 10px;
   border: 1.5px solid #ffffff;
-  margin-bottom: 40px;
 }
 @media (min-width: 501px) {
   #top .intro {
     width: 460px;
-  }
-}
-@media (min-width: 800px) {
-  #top .intro {
-    height: 250px;
   }
 }
 @media (min-width: 1000px) {
@@ -496,10 +511,14 @@ strong {
     align-items: center;
   }
 }
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   #top {
-    max-height: 100vw;
+    height: auto;
+    min-height: 100vh;
   }
+}
+.init-height {
+  height: 100vh;
 }
 footer {
   background-image: linear-gradient(135deg, #4fa49a, #4361c2);
