--- a/LESS/header.less
+++ b/LESS/header.less
@@ -43,9 +43,10 @@
     }
 
     .header-row1{
-        margin: 50px 0;
+        margin: 50px auto;
 
         .hello-welcome{
+            .flex-box(column wrap, space-evenly, center);
             .hello{
                 margin-bottom: 30px;
 
@@ -57,6 +58,15 @@
             .welcome{
                 display: none;
                 justify-content: flex-start;
+                text-align: center;
+
+                @media @tablet-landscape{
+                    text-align: left;
+                }
+            }
+
+            @media @tablet-landscape{
+                .flex-box(column wrap, space-evenly, flex-start);
             }
         }
 
@@ -89,11 +99,12 @@
     }
 
     .intro{
-        height: 280px;
-        .flex-box(column nowrap, space-between, center);
+        // height: 280px;
+        .flex-box(column nowrap, flex-start, center);
 
         h3{
             text-align: center;
+            margin-bottom: 20px;
         }
 
         a{
@@ -105,17 +116,13 @@
         
         .btn{
             text-decoration: none;
+            margin: 20px 0;
             .custom-btn(12px, 25px);
             border: 1.5px solid @white;
-            margin-bottom: 40px;
         }
 
         @media @tablet-portrait{
             width: 460px;
-        }
-
-        @media @tablet-landscape{
-            height: 250px;
         }
 
         @media @desktop{
@@ -128,7 +135,12 @@
         align-items: center;
     }
 
-    @media @tablet-landscape{
-        max-height: 100vw;
+    @media @desktop{
+        height: auto;
+        min-height: 100vh;
     }
+}
+
+.init-height{
+    height: 100vh;
 }
